--- a/db/data.yml
+++ b/db/data.yml
@@ -19,8 +19,19 @@ books:
   - title
   - created_at
   - updated_at
+  - author
+  - price
   records: 
   - - 1
     - bingle book
     - 2025-08-29 16:14:48.837500000 Z
     - 2025-08-29 16:14:48.837500000 Z
+    - bongle man
+    - 5.5
+
+  - - 2
+    - ads
+    - 2025-09-08 16:29:27.500913000 Z
+    - 2025-09-08 16:29:27.500913000 Z
+    - corby
+    - 3.2
